# rag-semantic-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .coverage  .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 756e129ae201_add_page_dimensions_and_block_level_.py  8a614f987a48_create_initial_tables.py  b9090ed8774c_add_hnsw_index_on_chunks_embedding.py
backend/app/: main.py  worker.py
backend/app/api/: auth.py  chat.py  deps.py  documents.py
backend/app/core/: config.py  database.py  queue.py  security.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  message.py  types.py  user.py
backend/app/schemas/: conversation.py  document.py  user.py
backend/app/services/: embeddings.py  ingestion.py  rag.py  retrieval.py
backend/tests/: conftest.py  test_auth.py  test_documents.py  test_ingestion.py
frontend/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.setup.ts
frontend/app/: layout.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/auth/: auth-guard.tsx
frontend/components/chat/: chat-panel.tsx
frontend/components/documents/: document-list.tsx  document-status-badge.tsx  document-upload.tsx  pdf-viewer.tsx
frontend/lib/: api-client.ts
frontend/stores/: auth-store.ts
frontend/types/: index.ts
(+8 files in other folders)
