[project]
name = "rag-platform-backend"
version = "0.1.0"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by the formatter
    "B008",  # FastAPI uses function calls (Depends, File) in argument defaults by design
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]        # allow assert statements in tests
"__init__.py" = ["F401"]    # allow unused imports in package inits

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
